[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/enemy4.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy_bul_effect1.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemy4.png" type="Texture" id=3]
[ext_resource path="res://scenes/other/metal_death_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/other/appear_par.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/other/engine_par.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=4]
radius = 9.32711

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 10.5739

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00300156, 0.0489254, 0.0963981 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0148148, 1 )
colors = PoolColorArray( 1, 0.222656, 0, 1, 0.142578, 0.142578, 0.142578, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 18.62
gravity = Vector3( 0, 0, 0 )
initial_velocity = 137.93
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[node name="enemy4" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.943874, -0.707907 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
playing = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 1, -1 )
shape = SubResource( 10 )

[node name="Particles2D" parent="." instance=ExtResource( 4 )]

[node name="appear_par" parent="." instance=ExtResource( 5 )]
position = Vector2( 1, 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/get_hit = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="shoot_pos" type="Position2D" parent="."]
position = Vector2( 1.06186, -0.707907 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -1 )
texture = ExtResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( -6.92957, 0.0787458 )
amount = 5
lifetime = 0.1
speed_scale = 0.3
local_coords = false
process_material = SubResource( 3 )

[node name="Particles2D3" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
